--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <a class="footer-nav-list-link" href="#">contact</a>
                 </li>
             </ul>
-            <small class="footer-nav-copy">Copyright © Coders Lab</small>
+            <small class="footer-nav-copy">Copyright © Car Sharing</small>
         </div>
     </div>
 </footer>
